add pumari and logs
